--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "bootstrap": "^3.4.1",
+    "textarea-caret": "^3.1.0",
+    "random-uuid": "^1.0.2",
+    "vue-autosize": "^1.0.2"
   },
   "devDependencies": {
+    "debounce": "^1.2.0",
+    "core-js": "^3.3.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
@@ -20,6 +25,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "propdoc": "^0.9.3"
   }
 }
