--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10",
-    "propdoc": "^0.9.3"
+    "propdoc": "^0.9.3",
+    "sass-loader": "^7.3.1",
+    "node-sass": "^4.13.0"
   }
 }
