--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vue-mentionable",
   "author": "Tuna Yagci (https://www.linkedin.com/in/tuna-ya%C4%9Fc%C4%B1-848b6183)",
-  "version": "0.2.0",
+  "version": "0.2.3",
   "description": "A collection of Vue components where user can mention anything with any identifier.",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "bundle": "vue-cli-service build --target lib --name vueMentionable src/index.js",
+    "bundle": "vue-cli-service build --target lib --name vue-mentionable src/index.js",
     "lint": "vue-cli-service lint"
   },
   "homepage": "https://github.com/TunaYagci/vue-mentionable",
@@ -59,7 +59,8 @@
   },
   "main": "./dist/vue-mentionable.common.js",
   "files": [
-    "src/index.js"
+    "dist/*.js",
+    "src/MentionableTextarea.vue"
   ],
   "keywords": [
     "vue mention",
