Fixed Suggestions list scroll by up/down arrow key Use Tab/Enter to select the highlighted selection Use Escape key to close the suggestion list Added Keyboard shortcuts to Readme Added more tags to package.json

--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "mentionable textarea",
     "vue auto complete",
     "vue autocomplete textarea",
-    "vue autocomplete mention"
+    "vue autocomplete mention",
+    "vue autocomplete hashtag",
+    "hashtag textarea"
   ]
 }
